import { afterAll, beforeAll, expect, test } from "bun:test";
import { $ } from "execa";
import server from "./server";

function $test(command: TemplateStringsArray) {
  test(command.toString(), async () => {
    const { exitCode, stdout, stderr } = await $(command);
    expect(exitCode).toMatchSnapshot();
    expect(stdout).toMatchSnapshot();
    expect(stderr).toMatchSnapshot();
  });
}

beforeAll(server.start);
afterAll(server.stop);

$test`fetchbook`;
$test`fetchbook --help`;
$test`fetchbook --version`;
$test`fetchbook run --all`;
$test`fetchbook run test/pass --all`;
$test`fetchbook run test/fail --all`;
$test`fetchbook run test --all`;
$test`fetchbook run examples --all`;
$test`fetchbook run test/pass/add-post.fetch.ts`;
$test`fetchbook run test/fail/get-posts.fetch.ts`;
$test`fetchbook export --all`;
$test`fetchbook export test/pass/add-post.fetch.ts`;
